--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
       };
     </script>
   </head>
-  <body class="font-Mulish">
+  <body class="container mx-auto font-Mulish">
     <!-- Header  -->
-    <div class="container mx-auto">
+
+    <header class="container mx-auto">
       <nav class="flex justify-between m-4 sm:mx- lg:mx-16">
+        <!-- logo -->
         <div class="">
           <img src="images/logo.png" alt="" class="w-full sm:w-32 lg:w-full" />
         </div>
+
+        <!-- pages -->
         <ul
           class="hidden sm:flex sm:gap-4 md:gap-5 lg:gap-8 items-center text-semibold"
         >
@@ -73,6 +77,45 @@
         </ul>
         <div class="sm:hidden"><i class="text-2xl fa-solid fa-bars"></i></div>
       </nav>
-    </div>
+    </header>
+
+    <!-- hero -->
+    <section class="container mx-auto my-20">
+      <div class="">
+        <!-- <img src="/images/Group.png" alt="" class="text-blue-600" /> -->
+      </div>
+      <div class="flex flex-col-reverse lg:flex-row">
+        <!-- content -->
+        <div
+          class="flex flex-1 flex-col justify-center items-start mt-8 ml-16 gap-y-4"
+        >
+          <h1
+            class="text-3xl text-black text-center font-bold md:text-4xl md:text-left lg:text-5xl"
+          >
+            Virtual healthcare <br />
+            <span class="">for you</span>
+          </h1>
+          <p
+            class="text-sm lg:text-base text-center lg:text-left text-gray-400 my-5"
+          >
+            Trafalgar provides progressive, and affordable <br />
+            healthcare, accessible on mobile and online for everyone
+          </p>
+          <button
+            class="text-white bg-bluish px-6 py-3 md:px-8 md:py-4 lg:left rounded-full"
+          >
+            Consult Today
+          </button>
+        </div>
+
+        <div class="flex justify-center">
+          <img
+            src="images/trafalgar-header illustration1.png"
+            alt=""
+            class="w-3/5 h-3/5 md:w-2/3 md:h-2/3 lg:w-4/5 lg:h-full"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
