--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
       <div class="flex flex-col-reverse lg:flex-row">
         <!-- content -->
         <div
-          class="flex flex-1 flex-col justify-center items-start mt-8 ml-16 gap-y-4"
+          class="flex flex-1 flex-col justify-center items-center md:items-center lg:items-start mt-8 ml-16 gap-y-4"
         >
           <h1
-            class="text-3xl text-black text-center font-bold md:text-4xl md:text-left lg:text-5xl"
+            class="text-3xl text-black font-bold md:text-4xl lg:text-left lg:text-5xl"
           >
             Virtual healthcare <br />
             <span class="">for you</span>
@@ -99,7 +99,8 @@
             class="text-sm lg:text-base text-center lg:text-left text-gray-400 my-5"
           >
             Trafalgar provides progressive, and affordable <br />
-            healthcare, accessible on mobile and online for everyone
+            healthcare, accessible on mobile and online <br />
+            for everyone
           </p>
           <button
             class="text-white bg-bluish px-6 py-3 md:px-8 md:py-4 lg:left rounded-full"
@@ -114,6 +115,91 @@
             alt=""
             class="w-3/5 h-3/5 md:w-2/3 md:h-2/3 lg:w-4/5 lg:h-full"
           />
+        </div>
+      </div>
+    </section>
+
+    <!-- Service -->
+    <section class="">
+      <div class="mx-auto center">
+        <h2 class="text-2xl font-bold text-center my-5">Our services</h2>
+        <p class="text-sm text-gray-400 text-center mb-12">
+          We provide to you the best choiches for you. Adjust it to your health
+          needs and make sure your undergo treatment
+          <br />
+          with our highly qualified doctors you can consult with us which type
+          of service is suitable for your health
+        </p>
+      </div>
+
+      <!-- Services -->
+      <div class="">
+        <!-- 1st phase -->
+        <div class="md:flex justify-center">
+          <div
+            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
+          >
+            <img src="/images/Frame6.png" alt="" class="w-14" />
+            <h5 class="text-lg font-bold py-2">Search doctor</h5>
+            <p class="text-xs text-gray-400">
+              Choose your doctor from thousands of specialist, general, and
+              trusted hospitals
+            </p>
+          </div>
+          <div
+            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
+          >
+            <img src="/images/Frame1.png" alt="" class="w-12" />
+            <h5 class="text-lg font-bold py-2">Online pharmacy</h5>
+            <p class="text-xs text-gray-400">
+              Buy your medicines with our mobile application with a simple
+              delivery system
+            </p>
+          </div>
+          <div
+            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
+          >
+            <img src="/images/Frame2.png" alt="" class="w-12" />
+            <h5 class="text-lg font-bold py-2">Consultation</h5>
+            <p class="text-xs text-gray-400">
+              Free consultation with our trusted doctors and get the best
+              recomendations
+            </p>
+          </div>
+        </div>
+
+        <!-- 2nd phase -->
+
+        <div class="md:flex justify-center">
+          <div
+            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
+          >
+            <img src="/images/Frame3.png" alt="" class="w-12" />
+            <h5 class="text-lg font-bold py-2">Details info</h5>
+            <p class="text-xs text-gray-400">
+              Free consultation with our trusted doctors and get the best
+              recomendations
+            </p>
+          </div>
+          <div
+            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
+          >
+            <img src="/images/Frame4.png" alt="" class="w-14" />
+            <h5 class="text-lg font-bold py-2">Emergency care</h5>
+            <p class="text-xs text-gray-400">
+              You can get 24/7 urgent care for yourself or your children and
+              your lovely family
+            </p>
+          </div>
+          <div
+            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
+          >
+            <img src="/images/Frame5.png" alt="" class="w-12" />
+            <h5 class="text-lg font-bold py-2">Tracking</h5>
+            <p class="text-xs text-gray-400">
+              Track and save your medical history and health data
+            </p>
+          </div>
         </div>
       </div>
     </section>
