--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             for everyone
           </p>
           <button
-            class="text-white bg-bluish px-6 py-3 md:px-8 md:py-4 lg:left rounded-full"
+            class="text-md text-white bg-bluish px-6 py-3 md:px-8 md:py-4 lg:left border-2 hover:border-2 hover:border-bluish hover:bg-white hover:text-bluish rounded-full shadow-lg"
           >
             Consult Today
           </button>
@@ -131,76 +131,72 @@
           of service is suitable for your health
         </p>
       </div>
-
+      
       <!-- Services -->
       <div class="">
-        <!-- 1st phase -->
-        <div class="md:flex justify-center">
-          <div
-            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
-          >
-            <img src="/images/Frame6.png" alt="" class="w-14" />
-            <h5 class="text-lg font-bold py-2">Search doctor</h5>
-            <p class="text-xs text-gray-400">
-              Choose your doctor from thousands of specialist, general, and
-              trusted hospitals
-            </p>
+          <!-- 1st phase -->
+          <div class="md:flex justify-center z-20">
+            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg z-20">
+              <img src="/images/Frame6.png" alt="" class="w-14" />
+              <h5 class="text-lg font-bold py-2">Search doctor</h5>
+              <p class="text-xs text-gray-400">
+                Choose your doctor from thousands of specialist, general, and
+                trusted hospitals
+              </p>
+            </div>
+            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+              <img src="/images/Frame1.png" alt="" class="w-12" />
+              <h5 class="text-lg font-bold py-2">Online pharmacy</h5>
+              <p class="text-xs text-gray-400">
+                Buy your medicines with our mobile application with a simple
+                delivery system
+              </p>
+            </div>
+            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+              <img src="/images/Frame2.png" alt="" class="w-12" />
+              <h5 class="text-lg font-bold py-2">Consultation</h5>
+              <p class="text-xs text-gray-400">
+                Free consultation with our trusted doctors and get the best
+                recomendations
+              </p>
+            </div>
           </div>
-          <div
-            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
-          >
-            <img src="/images/Frame1.png" alt="" class="w-12" />
-            <h5 class="text-lg font-bold py-2">Online pharmacy</h5>
-            <p class="text-xs text-gray-400">
-              Buy your medicines with our mobile application with a simple
-              delivery system
-            </p>
+  
+          <!-- 2nd phase -->
+          <div class="md:flex justify-center">
+            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+              <img src="/images/Frame3.png" alt="" class="w-12" />
+              <h5 class="text-lg font-bold py-2">Details info</h5>
+              <p class="text-xs text-gray-400">
+                Free consultation with our trusted doctors and get the best
+                recomendations
+              </p>
+            </div>
+            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+              <img src="/images/Frame4.png" alt="" class="w-14" />
+              <h5 class="text-lg font-bold py-2">Emergency care</h5>
+              <p class="text-xs text-gray-400">
+                You can get 24/7 urgent care for yourself or your children and
+                your lovely family
+              </p>
+            </div>
+            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+              <img src="/images/Frame5.png" alt="" class="w-12" />
+              <h5 class="text-lg font-bold py-2">Tracking</h5>
+              <p class="text-xs text-gray-400">
+                Track and save your medical history and health data
+              </p>
+            </div>
           </div>
-          <div
-            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
-          >
-            <img src="/images/Frame2.png" alt="" class="w-12" />
-            <h5 class="text-lg font-bold py-2">Consultation</h5>
-            <p class="text-xs text-gray-400">
-              Free consultation with our trusted doctors and get the best
-              recomendations
-            </p>
-          </div>
-        </div>
-
-        <!-- 2nd phase -->
-
-        <div class="md:flex justify-center">
-          <div
-            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
-          >
-            <img src="/images/Frame3.png" alt="" class="w-12" />
-            <h5 class="text-lg font-bold py-2">Details info</h5>
-            <p class="text-xs text-gray-400">
-              Free consultation with our trusted doctors and get the best
-              recomendations
-            </p>
-          </div>
-          <div
-            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
-          >
-            <img src="/images/Frame4.png" alt="" class="w-14" />
-            <h5 class="text-lg font-bold py-2">Emergency care</h5>
-            <p class="text-xs text-gray-400">
-              You can get 24/7 urgent care for yourself or your children and
-              your lovely family
-            </p>
-          </div>
-          <div
-            class="w-56 h-56 px-6 bg-yellow-400 mx-5 my-5 py-5 rounded-md shadow-md"
-          >
-            <img src="/images/Frame5.png" alt="" class="w-12" />
-            <h5 class="text-lg font-bold py-2">Tracking</h5>
-            <p class="text-xs text-gray-400">
-              Track and save your medical history and health data
-            </p>
-          </div>
-        </div>
+      </div>
+      
+<!-- Button  -->
+      <div class="flex justify-center my-10">
+        <button
+          class="text-lg px-8 py-3 border-2 hover:text-white hover:bg-bluish text-bluish border-bluish rounded-full shadow-lg center"
+        >
+          Learn more
+        </buttolg
       </div>
     </section>
   </body>
