--- a/index.html
+++ b/index.html
@@ -131,72 +131,132 @@
           of service is suitable for your health
         </p>
       </div>
-      
+
       <!-- Services -->
       <div class="">
-          <!-- 1st phase -->
-          <div class="md:flex justify-center z-20">
-            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg z-20">
-              <img src="/images/Frame6.png" alt="" class="w-14" />
-              <h5 class="text-lg font-bold py-2">Search doctor</h5>
-              <p class="text-xs text-gray-400">
-                Choose your doctor from thousands of specialist, general, and
-                trusted hospitals
-              </p>
-            </div>
-            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
-              <img src="/images/Frame1.png" alt="" class="w-12" />
-              <h5 class="text-lg font-bold py-2">Online pharmacy</h5>
-              <p class="text-xs text-gray-400">
-                Buy your medicines with our mobile application with a simple
-                delivery system
-              </p>
-            </div>
-            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
-              <img src="/images/Frame2.png" alt="" class="w-12" />
-              <h5 class="text-lg font-bold py-2">Consultation</h5>
-              <p class="text-xs text-gray-400">
-                Free consultation with our trusted doctors and get the best
-                recomendations
-              </p>
-            </div>
+        <!-- 1st phase -->
+        <div class="md:flex justify-center z-20">
+          <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg z-20">
+            <img src="/images/Frame6.png" alt="" class="w-14" />
+            <h5 class="text-lg font-bold py-2">Search doctor</h5>
+            <p class="text-xs text-gray-400">
+              Choose your doctor from thousands of specialist, general, and
+              trusted hospitals
+            </p>
           </div>
-  
-          <!-- 2nd phase -->
-          <div class="md:flex justify-center">
-            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
-              <img src="/images/Frame3.png" alt="" class="w-12" />
-              <h5 class="text-lg font-bold py-2">Details info</h5>
-              <p class="text-xs text-gray-400">
-                Free consultation with our trusted doctors and get the best
-                recomendations
-              </p>
-            </div>
-            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
-              <img src="/images/Frame4.png" alt="" class="w-14" />
-              <h5 class="text-lg font-bold py-2">Emergency care</h5>
-              <p class="text-xs text-gray-400">
-                You can get 24/7 urgent care for yourself or your children and
-                your lovely family
-              </p>
-            </div>
-            <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
-              <img src="/images/Frame5.png" alt="" class="w-12" />
-              <h5 class="text-lg font-bold py-2">Tracking</h5>
-              <p class="text-xs text-gray-400">
-                Track and save your medical history and health data
-              </p>
-            </div>
+          <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+            <img src="/images/Frame1.png" alt="" class="w-12" />
+            <h5 class="text-lg font-bold py-2">Online pharmacy</h5>
+            <p class="text-xs text-gray-400">
+              Buy your medicines with our mobile application with a simple
+              delivery system
+            </p>
           </div>
+          <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+            <img src="/images/Frame2.png" alt="" class="w-12" />
+            <h5 class="text-lg font-bold py-2">Consultation</h5>
+            <p class="text-xs text-gray-400">
+              Free consultation with our trusted doctors and get the best
+              recomendations
+            </p>
+          </div>
+        </div>
+
+        <!-- 2nd phase -->
+        <div class="md:flex justify-center">
+          <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+            <img src="/images/Frame3.png" alt="" class="w-12" />
+            <h5 class="text-lg font-bold py-2">Details info</h5>
+            <p class="text-xs text-gray-400">
+              Free consultation with our trusted doctors and get the best
+              recomendations
+            </p>
+          </div>
+          <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+            <img src="/images/Frame4.png" alt="" class="w-14" />
+            <h5 class="text-lg font-bold py-2">Emergency care</h5>
+            <p class="text-xs text-gray-400">
+              You can get 24/7 urgent care for yourself or your children and
+              your lovely family
+            </p>
+          </div>
+          <div class="w-56 h-56 px-6 mx-5 my-5 py-5 rounded-md shadow-lg">
+            <img src="/images/Frame5.png" alt="" class="w-12" />
+            <h5 class="text-lg font-bold py-2">Tracking</h5>
+            <p class="text-xs text-gray-400">
+              Track and save your medical history and health data
+            </p>
+          </div>
+        </div>
       </div>
-      
-<!-- Button  -->
+
+      <!-- Button  -->
       <div class="flex justify-center my-10">
         <button
           class="text-lg px-8 py-3 border-2 hover:text-white hover:bg-bluish text-bluish border-bluish rounded-full shadow-lg center"
         >
           Learn more
-        </buttolg
+        </button>
+      </div>
+    </section>
+
+    <!-- Features -->
+    <section class="lg:flex items-center justify-center mx-auto">
+      <div class="">
+        <img
+          src="/images/trafalgar-header illustration1.png"
+          alt=""
+          class="w-2/3 h-3/3"
+        />
+      </div>
+      <div class="">
+        <h2 class="text-2xl font-bold">
+          Leading healthcare <br />
+          providers
+        </h2>
+        <hr class="w-14 h-1 bg-gray-400 mb-5" />
+        <p class="text-sm text-gray-400 mb-5">
+          Trafalgar provides progressive, <br />
+          and affordable healthcare, accessible on mobile <br />
+          and online for everyone. To us, it’s not just work. <br />
+          We take pride in the solutions we deliver
+        </p>
+        <button
+          class="text-md px-6 py-2 border-2 hover:text-white hover:bg-bluish text-bluish border-bluish rounded-full shadow-lg center"
+        >
+          Learn more
+        </button>
+      </div>
+    </section>
+
+    <!-- another features -->
+
+    <section class="lg:flex items-center justify-center mx-auto">
+      <div class="">
+        <h2 class="text-2xl font-bold">
+          Download our <br />
+          mobile apps
+        </h2>
+        <hr class="w-14 h-1 bg-gray-400 mb-5" />
+        <p class="text-sm text-gray-400 mb-5">
+          Our dedicated patient engagement app and <br />
+          web portal allow you to access information <br />
+          instantaneously (no tedeous form, long calls, or <br />
+          administrative hassle) and securely
+        </p>
+        <button
+          class="text-md px-6 py-2 border-2 hover:text-white hover:bg-bluish text-bluish border-bluish rounded-full shadow-lg center"
+        >
+          Learn more
+        </button>
+      </div>
+
+      <div class="">
+        <img
+          src="/images/trafalgar-header illustration1.png"
+          alt=""
+          class="w-2/3 h-3/3"
+        />
       </div>
     </section>
   </body>
