--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <div class="flex justify-center">
           <img
-            src="images/trafalgar-header illustration1.png"
+            src="/images/trafalgar-header-illustration1.png"
             alt=""
             class="w-3/5 h-3/5 md:w-2/3 md:h-2/3 lg:w-4/5 lg:h-full"
           />
@@ -201,12 +201,12 @@
     </section>
 
     <!-- Features -->
-    <section class="lg:flex items-center justify-center mx-auto">
+    <section class="lg:flex items-center justify-center mx-auto my-48">
       <div class="">
         <img
-          src="/images/trafalgar-header illustration1.png"
+          src="/images/trafalgar-illustration-sec02.png"
           alt=""
-          class="w-2/3 h-3/3"
+          class="w-4/5 h-3/3"
         />
       </div>
       <div class="">
@@ -214,8 +214,8 @@
           Leading healthcare <br />
           providers
         </h2>
-        <hr class="w-14 h-1 bg-gray-400 mb-5" />
-        <p class="text-sm text-gray-400 mb-5">
+        <hr class="w-14 h-1 bg-gray-900 my-5 rounded-full" />
+        <p class="text-sm text-gray-400 my-5">
           Trafalgar provides progressive, <br />
           and affordable healthcare, accessible on mobile <br />
           and online for everyone. To us, it’s not just work. <br />
@@ -231,14 +231,14 @@
 
     <!-- another features -->
 
-    <section class="lg:flex items-center justify-center mx-auto">
-      <div class="">
+    <section class="lg:flex items-center justify-center my-14">
+      <div class="ml-auto">
         <h2 class="text-2xl font-bold">
           Download our <br />
           mobile apps
         </h2>
-        <hr class="w-14 h-1 bg-gray-400 mb-5" />
-        <p class="text-sm text-gray-400 mb-5">
+        <hr class="w-14 h-1 bg-gray-900 my-5 rounded-full" />
+        <p class="text-sm text-gray-400 my-5">
           Our dedicated patient engagement app and <br />
           web portal allow you to access information <br />
           instantaneously (no tedeous form, long calls, or <br />
@@ -251,11 +251,11 @@
         </button>
       </div>
 
-      <div class="">
+      <div class="ml-auto">
         <img
-          src="/images/trafalgar-header illustration1.png"
+          src="/images/trafalgar-illustration-sec03.png"
           alt=""
-          class="w-2/3 h-3/3"
+          class="w-4/5 h-3/3"
         />
       </div>
     </section>
